--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 .ipynb_checkpoints
-.*jpg
-*.png
-*.jpeg
+
+autoencoders-in-fastai/data/train/*
+autoencoders-in-fastai/data/valid/*
+
+time-series-anomalies/
